modules/org.restlet.www/learn/guide/1.1/extensions/atom.md
Atom extension
==============

Introduction
============

This extension provides support for the Atom standard. Atom is an
evolution of the RSS standard that was introduced to remove know
limitations and enable new features and usages, especially in the light
of the REST principles.

Its main purpose it to define a format to represent Web feeds such as
news feed. This is called the [Atom Syndication
Format](http://www.atomenabled.org/developers/syndication/atom-format-spec.php).

The second purpose is to support the publication and modification of
those Web feeds, remotely on the Web and in an interoperable manner.
This is called the [Atom Publishing
Protocol](http://www.atomenabled.org/developers/protocol/atom-protocol-spec.php)
(APP).

Description
===========

The Restlet extension for Atom provides a complete Atom API for both Web
feeds and publication documents. This API is capable of both parsing and
formatting Atom and APP XML documents compliants with the 1.0
specifications.

Links
-----

-   [AtomEnabled.org](http://www.atomenabled.org/)
-   [Wikipedia
    entry](http://en.wikipedia.org/wiki/Atom_%28standard%29)

